--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="splashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- Primary brand color. -->"
+        <item name="android:windowBackground">@drawable/workout
+
+        </item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
