--- a/app/src/main/res/drawable/splash_bg.xml
+++ b/app/src/main/res/drawable/splash_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
  <item>
      <bitmap android:gravity=""
-         android:src="@drawable/workout">
+         android:src="@drawable/fit">
 
      </bitmap>
  </item>
