creating all the fragments

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6E9ABD"
-    tools:context=".HomePageActivity">
+    tools:context=".UI.HomePageActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -20,7 +20,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcvHome"
-        android:name="com.owuoremmah.workoutlogactivity.PlanFragment"
+        android:name="com.owuoremmah.workoutlogactivity.UI.PlanFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#773F3F"
