--- a/app/src/main/res/layout/fragment_trackfragment.xml
+++ b/app/src/main/res/layout/fragment_trackfragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Trackfragment">
+    tools:context=".UI.Trackfragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
